[project]
name = "example_package_wagner"
version = "0.0.1"
authors = [
  { name="Wagner Alberto Soares Junior", email="wagneralbjr@gmail.com" },
]
description = "Testando como fazer deploy no pypi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wagneralbjr/"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"